# IbmMqPy

./: 002.bat  MessageQueueChecker.py  pyproject.toml  runme.py
templates/: report_template.html
